# ani_random_stuff

./: .gitignore  README.md
GNN/: README.md  introduction.py
GNN/introduction/: README.md  main.py
GNN/node_classification/: README.md  main.py
NMT_TF/: .gitignore  nmt_tf.py
cpp_scratch/: chap-0.tex  chap-1.tex  chap-2.tex  notes.tex  notes.txt  p004_functions.cpp  p008_add.h  p008_main.cpp  p012_main  p012_math.h  p014_square.cpp  p015.cpp
cpp_scratch/HelloWorld/: main.cpp
cpp_scratch/quizzes/: q1_4_a.cpp
cpp_scratch/src/: p002_variables.cpp  p004_functions.cpp  p005_funcParams.cpp  p006_localScope.cpp  p007_forwardDeclarations.cpp  p008_add.cpp  p008_add.h  p008_main.cpp  p010.cpp  p011_func.cpp  p011_main.cpp  p012_geometry.h  p012_main.cpp  p013_main.cpp  p013_square.cpp  p013_square.h  p014_main.cpp  p014_square.h  p015.cpp
gpu_learn/homework_01/: CMakeLists.txt  Makefile  student_func.cu
gpu_learn/lesson_01/: cube.cu  cube_try.cu  square.cu
karpathy/micrograd/: example.py
kotlin_learn/: tic_tac_toe_2_player.kt
misc_progs/cpp/: ani_array.cpp  autosuggest.cpp  double_indirections.cpp  factorial_template_metaprogramming.cpp  memleak.cpp  random_int_gen.cpp  roman_converter.cpp  shared_ptr_int_vec.cpp  shared_ptr_vec_swap.cpp  spin_donut.c
misc_progs/python/: ani_001.py  args_exp.py
ml/week1/: gradient_descent.py
parallel_TF/: .gitignore  TF_distributed_GPU.py  TF_simple_MNIST.py
parallel_pytorch/: pytorch_DDP_GPU.py  pytorch_double_GPU.py
part_1/: prog1.py  prog2.py  q1.cpp  q2.cpp
ros/: README.md  template.tex
(+11 files in other folders)
